[metadata]
name = astpath
author = H. Chase Stevens
author_email = chase@chasestevens.com
license = MIT
description = A query language for Python abstract syntax trees
long_description = file: README.md
long_description_content_type = text/markdown
keywords = xpath, xml, ast, asts, syntax, query
url = https://github.com/hchasestevens/astpath
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
packages = astpath

[options.entry_points]
console_scripts = astpath = astpath.__main__:main

[options.extras_require]
xpath = lxml>=3.3.5
